--- a/MLB_Statcast_2019.ipynb
+++ b/MLB_Statcast_2019.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "adc191d6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import dependencies\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -14,32 +15,14 @@
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f248c456",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
     "class DataFrameSelector(BaseEstimator, TransformerMixin):\n",
     "    def __init__(self, attribute_names):\n",
     "        self.attribute_names = attribute_names\n",
     "    def fit(self, X, y=None):\n",
     "        return self;\n",
     "    def transform(self, X):\n",
-    "        return X[self.attribute_names].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "3d1cba0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return X[self.attribute_names].values\n",
     "class MyLabelEncoder(LabelEncoder):\n",
     "    def fit(self, X, y=None):\n",
     "        super(MyLabelEncoder, self).fit(X)\n",
@@ -52,18 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "b5c36495",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the data\n",
     "statcast_df = pd.read_csv('Data/Statcast_2020.csv')\n",
     "batters_df = pd.read_csv('Data/batters_2019.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "db9f6fe7",
    "metadata": {},
    "outputs": [
@@ -94,7 +78,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,8 +89,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c7e5c1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>xba</th>\n",
+       "      <th>xslg</th>\n",
+       "      <th>xwoba</th>\n",
+       "      <th>xobp</th>\n",
+       "      <th>xiso</th>\n",
+       "      <th>exit_velocity_avg</th>\n",
+       "      <th>launch_angle_avg</th>\n",
+       "      <th>barrel_batted_rate</th>\n",
+       "      <th>Unnamed: 12</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pujols</td>\n",
+       "      <td>Albert</td>\n",
+       "      <td>405395</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.247</td>\n",
+       "      <td>0.422</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>0.175</td>\n",
+       "      <td>88.3</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cabrera</td>\n",
+       "      <td>Miguel</td>\n",
+       "      <td>408234</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.266</td>\n",
+       "      <td>0.433</td>\n",
+       "      <td>0.328</td>\n",
+       "      <td>0.334</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>90.4</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Choo</td>\n",
+       "      <td>Shin-Soo</td>\n",
+       "      <td>425783</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.262</td>\n",
+       "      <td>0.476</td>\n",
+       "      <td>0.362</td>\n",
+       "      <td>0.369</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>91.9</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jones</td>\n",
+       "      <td>Adam</td>\n",
+       "      <td>430945</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.256</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.318</td>\n",
+       "      <td>0.311</td>\n",
+       "      <td>0.174</td>\n",
+       "      <td>86.1</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cruz Jr.</td>\n",
+       "      <td>Nelson</td>\n",
+       "      <td>443558</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.638</td>\n",
+       "      <td>0.416</td>\n",
+       "      <td>0.378</td>\n",
+       "      <td>0.348</td>\n",
+       "      <td>93.7</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  last_name  first_name  player_id  year    xba   xslg  xwoba   xobp   xiso  \\\n",
+       "0    Pujols      Albert     405395  2019  0.247  0.422  0.315  0.310  0.175   \n",
+       "1   Cabrera      Miguel     408234  2019  0.266  0.433  0.328  0.334  0.167   \n",
+       "2      Choo    Shin-Soo     425783  2019  0.262  0.476  0.362  0.369  0.214   \n",
+       "3     Jones        Adam     430945  2019  0.256  0.430  0.318  0.311  0.174   \n",
+       "4  Cruz Jr.      Nelson     443558  2019  0.290  0.638  0.416  0.378  0.348   \n",
+       "\n",
+       "   exit_velocity_avg  launch_angle_avg  barrel_batted_rate  Unnamed: 12  \n",
+       "0               88.3              12.5                 5.8          NaN  \n",
+       "1               90.4              12.3                 6.7          NaN  \n",
+       "2               91.9               9.1                 9.0          NaN  \n",
+       "3               86.1              13.4                 6.7          NaN  \n",
+       "4               93.7              13.1                19.9          NaN  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batters_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "16ef03d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['hit_into_play', 'ball', 'called_strike', 'foul',\n",
+       "       'swinging_strike', 'foul_tip', 'blocked_ball', 'hit_by_pitch',\n",
+       "       'swinging_strike_blocked', 'foul_bunt', 'missed_bunt', 'pitchout',\n",
+       "       'bunt_foul_tip'], dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find unique elements of array\n",
+    "statcast_df.description.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c80cc1c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>inning</th>\n",
+       "      <th>inning_topbot</th>\n",
+       "      <th>outs_when_up</th>\n",
+       "      <th>balls</th>\n",
+       "      <th>strikes</th>\n",
+       "      <th>stand</th>\n",
+       "      <th>p_throws</th>\n",
+       "      <th>effective_speed</th>\n",
+       "      <th>release_spin_rate</th>\n",
+       "      <th>spin_axis</th>\n",
+       "      <th>pfx_x</th>\n",
+       "      <th>pfx_z</th>\n",
+       "      <th>plate_x</th>\n",
+       "      <th>plate_z</th>\n",
+       "      <th>sz_top</th>\n",
+       "      <th>sz_bot</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>100.2</td>\n",
+       "      <td>2483.0</td>\n",
+       "      <td>198.0</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>1.07</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.16</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>hit_into_play</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>L</td>\n",
+       "      <td>R</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2522.0</td>\n",
+       "      <td>189.0</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>3.72</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>ball</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>90.8</td>\n",
+       "      <td>2537.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>-0.45</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>called_strike</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>101.7</td>\n",
+       "      <td>2469.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>-0.27</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>foul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Top</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>R</td>\n",
+       "      <td>R</td>\n",
+       "      <td>98.9</td>\n",
+       "      <td>2339.0</td>\n",
+       "      <td>191.0</td>\n",
+       "      <td>-0.23</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>3.67</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>1.58</td>\n",
+       "      <td>swinging_strike</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   inning inning_topbot  outs_when_up  balls  strikes stand p_throws  \\\n",
+       "0       9           Top             2      1        0     L        R   \n",
+       "1       9           Top             2      0        0     L        R   \n",
+       "2       9           Top             1      3        2     R        R   \n",
+       "3       9           Top             1      3        1     R        R   \n",
+       "4       9           Top             1      3        0     R        R   \n",
+       "\n",
+       "   effective_speed  release_spin_rate  spin_axis  pfx_x  pfx_z  plate_x  \\\n",
+       "0            100.2             2483.0      198.0  -0.15   1.64     1.07   \n",
+       "1            100.0             2522.0      189.0   0.06   1.72     1.61   \n",
+       "2             90.8             2537.0       58.0   0.33  -0.45     0.24   \n",
+       "3            101.7             2469.0      191.0  -0.27   1.55     0.37   \n",
+       "4             98.9             2339.0      191.0  -0.23   1.57     0.11   \n",
+       "\n",
+       "   plate_z  sz_top  sz_bot      description  \n",
+       "0     2.00    3.16    1.48    hit_into_play  \n",
+       "1     3.72    3.09    1.37             ball  \n",
+       "2     2.56    3.20    1.55    called_strike  \n",
+       "3     2.35    3.42    1.58             foul  \n",
+       "4     3.67    3.42    1.58  swinging_strike  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save import columns\n",
+    "statcast_df = statcast_df[['inning', 'inning_topbot', 'outs_when_up', 'balls', 'strikes', 'stand', \n",
+    " 'p_throws', 'effective_speed', 'release_spin_rate', 'spin_axis', 'pfx_x', \n",
+    " 'pfx_z', 'plate_x', 'plate_z', 'sz_top', 'sz_bot', 'description']]\n",
+    "\n",
+    "statcast_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8127b9d1",
    "metadata": {},
    "outputs": [],
    "source": []
