--- a/MLB_Statcast_2020.ipynb
+++ b/MLB_Statcast_2020.ipynb
@@ -388,6 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Label the data\n",
     "numerical = ['inning', 'outs_when_up', 'balls', 'strikes', 'effective_speed', 'release_spin_rate', 'spin_axis', 'pfx_x', 'pfx_z', 'plate_x', 'plate_z', 'sz_top', 'sz_bot']\n",
     "categorical = ['inning_topbot']"
    ]
