--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -1774,7 +1774,7 @@
     }
    ],
    "source": [
-    "#Create database sorted by team\n",
+    "#Create database sorted by pitchers team\n",
     "df_teams = df_merge[['inning_topbot','home_team','away_team','pitch_type','release_speed','release_pos_x','release_pos_z','player_name','zone','game_type','stand','p_throws','type','balls','strikes','pfx_x','pfx_z','plate_x','plate_z','inning','vx0','vy0','ax','ay','az','sz_top','sz_bot','effective_speed','release_spin_rate','release_extension','release_pos_y','at_bat_number','pitch_number','pitch_name','spin_axis','delta_home_win_exp','delta_run_exp']]\n",
     "df_top = df_teams[df_teams['inning_topbot']== 'Top']\n",
     "df_bottom = df_teams[df_teams['inning_topbot']== 'Bottom']\n",
@@ -2168,7 +2168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_teams.to_csv('resources/team.csv')"
+    "# Save teams DF\n",
+    "df_teams.to_csv('resources/team.csv')\n"
    ]
   },
   {
@@ -2298,6 +2299,7 @@
     }
    ],
    "source": [
+    "#Create strike DataFrame\n",
     "pitcher_strikes = df_clean[['player_name','type','pitch_type']]\n",
     "pitcher_strikes = pitcher_strikes[pitcher_strikes['type'].isnull() == False]\n",
     "pitcher_strikes"
@@ -2430,6 +2432,7 @@
     }
    ],
    "source": [
+    "#Create Zone DataFrame\n",
     "pitcher_zones = df_clean[['player_name','zone','pitch_type']]\n",
     "pitcher_zones = pitcher_zones[pitcher_zones['zone'].isnull() == False]\n",
     "pitcher_zones"
@@ -2442,6 +2445,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Save new DataFrames\n",
     "pitcher_strikes.to_csv('resources/strikes.csv')\n",
     "pitcher_zones.to_csv('resources/zones.csv')\n"
    ]
@@ -2449,7 +2453,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d4af663d",
+   "id": "f4dc2fdd",
    "metadata": {},
    "outputs": [
     {
@@ -2466,6 +2470,7 @@
     }
    ],
    "source": [
+    "#SQL JOIN Connection\n",
     "conn = psycopg2.connect(\"dbname=team_country_music user=postgres password=** STAND IN PASSWORD **\")\n",
     "cur = conn.cursor()\n",
     "\n",
@@ -2485,7 +2490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aaba611",
+   "id": "a822fa73",
    "metadata": {},
    "outputs": [],
    "source": []
