--- a/Test Model Connection.ipynb
+++ b/Test Model Connection.ipynb
@@ -477,19 +477,19 @@
     }
    ],
    "source": [
-    "# Reflect the Tables into SQLAlchemy ORM\n",
+    "# Create Engine\n",
     "engine = create_engine('postgresql+psycopg2://postgres:**STAND IN PASSWORD**@localhost:5432/team_country_music')\n",
     "\n",
-    "# Create Base:\n",
+    "# Create Base\n",
     "Base = automap_base()\n",
     "\n",
-    "# Reflect:\n",
+    "# Reflect\n",
     "Base.prepare(engine, reflect=True)\n",
     "\n",
-    "# Save reference to the table:\n",
+    "# Save Base Class\n",
     "Pitching = Base.classes.pitcher_data\n",
     "\n",
-    "# Session Link:\n",
+    "# Create Session\n",
     "session = Session(engine)\n",
     "\n",
     "# Query Pitching Data\n",
@@ -525,7 +525,7 @@
     "                        Pitching.player_name,\n",
     "                       Pitching.pitch_type).all()\n",
     "\n",
-    "# Save the query results to DataFrame\n",
+    "# Create DataFrame\n",
     "pitchers_df = pd.DataFrame(results, columns=['ID',\n",
     "                                         'release_speed',\n",
     "                                         'zone',\n",
