--- a/Models/Pitching/all_pitchers_gbc_pitch.ipynb
+++ b/Models/Pitching/all_pitchers_gbc_pitch.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# Import model dependencies\r\n",
+    "# Import pandas\r\n",
     "import pandas as pd\r\n",
+    "\r\n",
+    "# Import model dependencies\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
@@ -14,9 +16,6 @@
     "\r\n",
     "# Import pickle\r\n",
     "import pickle\r\n",
-    "\r\n",
-    "# Import config information\r\n",
-    "from config import USER_NAME, PASSWORD\r\n",
     "\r\n",
     "# Create global seed\r\n",
     "yogi = 8"
