Remove unnecessary standardization

--- a/Models/Pitching/all_pitchers_gbc_pitch.ipynb
+++ b/Models/Pitching/all_pitchers_gbc_pitch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "source": [
     "# Import pandas\r\n",
     "import pandas as pd\r\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "source": [
     "# Read in data \r\n",
     "file_path = '../../Data/Pitchers/top_nine_pitchers.csv'\r\n",
@@ -380,14 +380,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
     "# Drop Unnecessary columns\r\n",
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp', 'release_pos_x', 'release_pos_z'], axis = 1, inplace = True)"
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "source": [
     "# Combine 'ball' and 'in play' values into 'not strike' bin\r\n",
     "not_strike = ['B', 'X']\r\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "source": [
     "# Generate categorical variable list\r\n",
     "pitch_cat = pitchers_df.dtypes[pitchers_df.dtypes == 'object'].index.tolist()\r\n",
@@ -426,14 +426,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "source": [
     "# Create a OneHotEncoder instance\r\n",
     "enc = OneHotEncoder(sparse = False)\r\n",
@@ -586,14 +586,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "source": [
     "# Merge one-hot encoded features and drop the originals\r\n",
     "pitchers_df = pitchers_df.merge(\r\n",
@@ -809,14 +809,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "source": [
     "# Drop superfluous columns \r\n",
     "pitchers_df.drop(columns = ['stand_L', 'p_throws_L'], axis = 1, inplace = True)\r\n",
@@ -1018,7 +1018,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 11
     }
    ],
    "metadata": {}
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
@@ -1223,14 +1223,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['type'].values\r\n",
@@ -1245,34 +1245,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "source": [
-    "# Create a StandardScaler instance\r\n",
-    "scaler = StandardScaler()\r\n",
-    "\r\n",
-    "# Fit Standard Scaler \r\n",
-    "X_scaler = scaler.fit(X_train)\r\n",
-    "\r\n",
-    "# Scaling data\r\n",
-    "X_train_scaled = X_scaler.transform(X_train)\r\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
    ],
    "outputs": [],
    "metadata": {}
@@ -1286,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
@@ -1302,26 +1285,26 @@
     "        random_state = yogi)\r\n",
     "    \r\n",
     "    # Fit the model\r\n",
-    "    classifier.fit(X_train_scaled, y_train)\r\n",
+    "    classifier.fit(X_train, y_train)\r\n",
     "    print(f'Learning Rate: {learning_rate}')\r\n",
     "\r\n",
     "    # Score the model\r\n",
     "    print('Accuracy Score (training): {0:.3f}'.format(\r\n",
     "        classifier.score(\r\n",
-    "            X_train_scaled,\r\n",
+    "            X_train,\r\n",
     "            y_train\r\n",
     "        )\r\n",
     "    ))\r\n",
     "    print('Accuracy Score (validation): {0:.3f}'.format(\r\n",
     "        classifier.score(\r\n",
-    "            X_test_scaled,\r\n",
+    "            X_test,\r\n",
     "            y_test\r\n",
     "        )\r\n",
     "    ))\r\n",
     "    print()\r\n",
     "\r\n",
-    "    if classifier.score(X_test_scaled, y_test) > best_acc:\r\n",
-    "        best_acc = classifier.score(X_test_scaled, y_test)\r\n",
+    "    if classifier.score(X_test, y_test) > best_acc:\r\n",
+    "        best_acc = classifier.score(X_test, y_test)\r\n",
     "        best_rate = learning_rate"
    ],
    "outputs": [
@@ -1367,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
@@ -1379,10 +1362,10 @@
     ")\r\n",
     "\r\n",
     "# Fit the model\r\n",
-    "classifier.fit(X_train_scaled, y_train)\r\n",
+    "classifier.fit(X_train, y_train)\r\n",
     "\r\n",
     "# Make predictions\r\n",
-    "predictions = classifier.predict(X_test_scaled)\r\n",
+    "predictions = classifier.predict(X_test)\r\n",
     "pd.DataFrame({'Prediction': predictions, 'Actual': y_test}).head(20)"
    ],
    "outputs": [
@@ -1542,7 +1525,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -1556,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -1575,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -1603,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "source": [
     "# Save model file\r\n",
     "filename = '../Saved/all_pitchers_gbc_pitch.sav'\r\n",
