--- a/Models/Zone/all_pitchers_gbc_zone.ipynb
+++ b/Models/Zone/all_pitchers_gbc_zone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "source": [
     "# Import model dependencies\r\n",
     "import pandas as pd\r\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "source": [
     "# Read in data \r\n",
     "file_path = '../../Data/Pitchers/top_nine_pitchers.csv'\r\n",
@@ -381,14 +381,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "source": [
     "# Drop Unnamed columns\r\n",
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'type', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp'], axis = 1, inplace = True)"
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "source": [
     "# Generate categorical variable list\r\n",
     "pitch_cat = pitchers_df.dtypes[pitchers_df.dtypes == 'object'].index.tolist()\r\n",
@@ -414,14 +414,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 23
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "source": [
     "# Create a OneHotEncoder instance\r\n",
     "enc = OneHotEncoder(sparse = False)\r\n",
@@ -574,14 +574,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 24
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "source": [
     "# Merge one-hot encoded features and drop the originals\r\n",
     "pitchers_df = pitchers_df.merge(\r\n",
@@ -797,14 +797,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 25
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "source": [
     "# Drop superfluous columns \r\n",
     "pitchers_df.drop(columns = ['stand_L', 'p_throws_L'], axis = 1, inplace = True)\r\n",
@@ -1015,7 +1015,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 26
     }
    ],
    "metadata": {}
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
@@ -1226,14 +1226,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 27
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['zone'].values\r\n",
@@ -1248,61 +1248,19 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 28
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi, stratify = y)"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "source": [
-    "# Create a StandardScaler instance\r\n",
-    "scaler = StandardScaler()\r\n",
-    "\r\n",
-    "# Fit Standard Scaler \r\n",
-    "X_scaler = scaler.fit(X_train)\r\n",
-    "\r\n",
-    "# Scaling data\r\n",
-    "X_train_scaled = X_scaler.transform(X_train)\r\n",
-    "X_test_scaled = X_scaler.transform(X_test)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "source": [
-    "X.columns"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['release_speed', 'release_pos_x', 'release_pos_z', 'balls', 'strikes',\n",
-       "       'inning', 'release_spin_rate', 'release_extension', 'pitch_number',\n",
-       "       'pitch_type_CH', 'pitch_type_CU', 'pitch_type_FC', 'pitch_type_FF',\n",
-       "       'pitch_type_FT', 'pitch_type_KC', 'pitch_type_SI', 'pitch_type_SL',\n",
-       "       'stand_R', 'p_throws_R'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
    "metadata": {}
   },
   {
@@ -1314,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
@@ -1330,26 +1288,26 @@
     "        random_state = yogi)\r\n",
     "    \r\n",
     "    # Fit the model\r\n",
-    "    classifier.fit(X_train_scaled, y_train)\r\n",
+    "    classifier.fit(X_train, y_train)\r\n",
     "    print(f'Learning Rate: {learning_rate}')\r\n",
     "\r\n",
     "    # Score the model\r\n",
     "    print('Accuracy Score (training): {0:.3f}'.format(\r\n",
     "        classifier.score(\r\n",
-    "            X_train_scaled,\r\n",
+    "            X_train,\r\n",
     "            y_train\r\n",
     "        )\r\n",
     "    ))\r\n",
     "    print('Accuracy Score (validation): {0:.3f}'.format(\r\n",
     "        classifier.score(\r\n",
-    "            X_test_scaled,\r\n",
+    "            X_test,\r\n",
     "            y_test\r\n",
     "        )\r\n",
     "    ))\r\n",
     "    print()\r\n",
     "\r\n",
-    "    if classifier.score(X_test_scaled, y_test) > best_acc:\r\n",
-    "        best_acc = classifier.score(X_test_scaled, y_test)\r\n",
+    "    if classifier.score(X_test, y_test) > best_acc:\r\n",
+    "        best_acc = classifier.score(X_test, y_test)\r\n",
     "        best_rate = learning_rate"
    ],
    "outputs": [
@@ -1375,7 +1333,7 @@
       "\n",
       "Learning Rate: 0.75\n",
       "Accuracy Score (training): 0.367\n",
-      "Accuracy Score (validation): 0.278\n",
+      "Accuracy Score (validation): 0.279\n",
       "\n",
       "Learning Rate: 1\n",
       "Accuracy Score (training): 0.334\n",
@@ -1395,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
@@ -1407,10 +1365,10 @@
     ")\r\n",
     "\r\n",
     "# Fit the model\r\n",
-    "classifier.fit(X_train_scaled, y_train)\r\n",
+    "classifier.fit(X_train, y_train)\r\n",
     "\r\n",
     "# Make predictions\r\n",
-    "predictions = classifier.predict(X_test_scaled)\r\n",
+    "predictions = classifier.predict(X_test)\r\n",
     "pd.DataFrame({'Prediction': predictions, 'Actual': y_test}).head(20)"
    ],
    "outputs": [
@@ -1570,7 +1528,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 32
     }
    ],
    "metadata": {}
@@ -1584,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -1603,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -1642,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "source": [
     "# Save model file\r\n",
     "filename = '../Saved/all_pitchers_zone.sav'\r\n",
